--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router": "^7.10.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
